### 1.2.5.2-dev

- updates to SLiPT-Seq subroutine to correct removing quality scores from adapter sequence
- allow mismatches to remove linker sequences for SLiPT-Seq v1 or v2.1 and allow reverse complement in R2 (for NextSeq, NovaSeq v1.5, etc)
- pass command-line arguments to configure cell ranger

### 1.2.5.1

- minor patch to revert potentially breaking changes in v1.2.5 when running perl instead of sed 

### 1.2.5

- updates PATH environment variable to call /universc/launch_universc.sh from any working directory

- enables double or triple digit lane numbers (suppports 16 lane NovaSeq X series
scheduled for launch in Q1 2023, expected to be compatible with older models and
BGI or Ultima high throughput sequencing platforms)

- migrates sed calls to perl for better memory-efficiency on large input files

- set default user as "root" in docker containers and ensure that cellranger is writeable
  to allow running in nextflow or singularity (https://github.com/nf-core/modules/pull/1706)

### 1.2.4

- enables unit testing via nextflow for nf-core module

- removes forced "auto" chemistry for 10x technology (allows setting for test fies too small for automated detection)

- sets default values for last call parameters to 10x technology if not found (allows runs without errors on 1st call)

- enables computing RNA offset parameters without warning messages (supports containerised workflows)  

### 1.2.3

- enables GitHub citation widget

- updates SmartSeq2 and SmartSeq3 default barcodes 

- updates SmartSeq2 adapter sequences and documents chemistry configurations

- enables running Slurm scheduler with automatic template configuration

- correctly sets the source directory to call subroutines and whitelists on Slurm (https://stackoverflow.com/questions/56962129/how-to-get-original-location-of-script-used-for-slurm-job)

### 1.2.2

- bug fixes for detecting I1 and I2 files
